--- a/server/config/config.env
+++ b/server/config/config.env
@@ -2,3 +2,15 @@
 PORT=4000
 PASSWORD=BjTdU0o6D6MU4e8J
 MONGO_URI="mongodb+srv://pawanb78:BjTdU0o6D6MU4e8J@cluster0.hgoxyqg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+OTP-EXPIRE=5
+
+mailtrap credintials
+SMTP_HOST: "sandbox.smtp.mailtrap.io",
+SMTP_PORT: 2525,
+SMTP_USER: "22e21ff54b0d5a",
+SMTP_PASS: "e3a60ed398fa13"
+
+
+JWT_COOKIE_EXPIRE=10
+
+JWT_SECRET="THISISJWTSECRET"
